# act-placemat

./: .env  .env.notion-ai-agent  .gitignore  .gitignore.new  .gitmessage  .mcp.json  ABSOLUTE_COMPLETE_FEATURE_INVENTORY.md  ACT_CONTENT_STRATEGY_AND_MEDIA_SYSTEM.md  ACT_EMPATHY_LEDGER_CLIENT_CASE_STUDY.md  ACT_INTELLIGENCE_EVOLUTION_PLAN.md  ACT_INTELLIGENCE_PLATFORM_REAL_PLAN.md  ACT_INTELLIGENCE_PLATFORM_REVISED.md  ACT_KNOWLEDGE_WIKI_DATA_INVENTORY.md  ACT_MASTER_ALIGNMENT_OVERVIEW.md  ACT_NETWORK_CONNECTIONS_REPORT.md  ACT_PLATFORM_READY_TO_USE.md  ACT_PROJECTS_RAW_DATA.json  ADD_MISSING_COLUMNS.sql  ADD_NOTION_FIELDS_GUIDE.md  ADD_SYNCED_AT.sql  APPLY_MIGRATIONS.md  ARCHITECTURE.md  AUTOMATED_BEAUTIFUL_OBSOLESCENCE.md  AUTOMATED_BEAUTIFUL_OBSOLESCENCE_SUCCESS.md  BACKEND_DEPLOYMENT_RECOMMENDATION.md  BEAUTIFUL_OBSOLESCENCE_READY_TO_IMPLEMENT.md  BUGS_FIXED.md  BUGS_FOUND.md  BUG_REPORT.md  BUILD_STATUS.md  BUSINESS_GROWTH_STRATEGY_2025.md  CLAUDE.md  CODEBASE_AUDIT_ANALYSIS.md  CODEBASE_CLEANUP_AUDIT.md  CODEBASE_REVIEW_SUMMARY.md  COLLABORATIVE_ROADMAP.md  COMMUNITY-CENTERED-SHOWCASE-IMPLEMENTATION-GUIDE.md  COMPLETE_FEATURE_LIST.md  COMPLETE_GMAIL_SCHEMA_FIX.sql  COMPLETE_GMAIL_SETUP.sql  (+128 more)
.taskmaster/: WORLD_CLASS_DATA_LAKE_ARCHITECTURE.md  config.json  state.json
Docs/: ACT_feedback_Chat.md  API_TEST_RESULTS.md  CODE_ORGANIZATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  Full_Development.md  INDEX.md  PLATFORM_CAPABILITIES.md  Placemat code.md  QUICK_START.md  README.md  README_NAVIGATION.md
alerts/: opportunity-alerts-2025-07-17.json  opportunity-alerts-2025-07-20.json  weekly-action-2025-07-17.html  weekly-action-2025-07-17.json  (+7 more)
infrastructure/agents/python/: README.md  pyproject.toml
infrastructure/agents/python/agents/: strategic_advisor.py
infrastructure/agents/python/shared/: __init__.py  base_agent.py  models.py
(+2097 files in other folders)
