[tool.poetry]
name = "act-agents"
version = "1.0.0"
description = "Python-based AI agents for ACT Placemat platform"
authors = ["ACT Team <tech@actplacemat.org.au>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "shared"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"

# AI and ML
openai = "^1.6.0"
anthropic = "^0.8.0"
tiktoken = "^0.5.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.1.0"

# Data processing
pandas = "^2.1.4"
numpy = "^1.26.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"

# Database and storage
asyncpg = "^0.29.0"
redis = "^5.0.0"
boto3 = "^1.34.0"

# Task queue
celery = "^5.3.0"
kombu = "^5.3.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
typer = "^0.9.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
act-agent = "agents.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=agents --cov=shared --cov-report=html --cov-report=term-missing"